[fix] Adjust margin top of container task list
The extremely negative top margin pushed the task list out of the viewport

--- a/src/app.module.css
+++ b/src/app.module.css
@@ -82,7 +82,7 @@
   align-items: center;
   align-self: stretch;
 
-  margin-top: -66.5rem;
+  margin-top: 1rem;
   gap: 0.75rem;
 }
 
